# TDEI-gtfs-csv-validator

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  freeze_version.py  gcv_support.py  gcv_testfcns.py  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-publish.yml  python_test_publish.yml  unit_tests.yml
rules/: .pathways_v1.0_rules.swp  gtfs_flex_v2.0_rules.csv  gtfs_pathways_v1.0_rules.csv  pathways_v1.0_rules
schemas/: pathways_v1.0_schema.csv
schemas/gtfs_pathways/v1.0/: pathways_schema.csv  stops_schema.csv
src/tdei_gtfs_csv_validator/: gcv_test_release.py
tcat_gtfs_csv_validator/: gcv_test_release.py
tdei_gtfs_csv_validator/: __init__.py  __main__.py  example_use.py  exceptions.py  gcv_main.py  gcv_runtests.py  gcv_support.py  gcv_test_release.py
test_files/: test.csv
test_files/gtfs_flex/v2.0/success_1_all_attrs/: booking_rules.txt  location_groups.txt  stop_times.txt
test_files/gtfs_pathways/v1.0/fail_schema_1/: stops_v1_test_fail_schema_1.txt
test_files/gtfs_pathways/v1.0/mbta_20220920/: stops.txt
test_files/gtfs_pathways/v1.0/mbta_20220920_small/: levels_small.txt  pathways_small.txt
test_files/gtfs_pathways/v1.0/success_1_all_attrs/: levels_v1_test_success_1.txt  stops_v1_test_success_1.txt
test_files/gtfs_pathways/v1.0/success_2_missing_attrs/: stops_v1_test_success_2.txt
test_files/pathways/v1.0/: pathways_v1.0_test_fail_1  pathways_v1.0_test_success_1  pathways_v1.0_test_success_2
tests/: test_flex.py  test_gcv_test_release.py  test_pathways.py  test_support.py
tests/test_files/gtfs_flex/v2.0/fail_schema_1/: booking_rules_fail_schema_1.txt  location_groups_fail_schema_1.txt  locations_fail_schema_1.geojson  stop_times_fail_schema_1.txt
tests/test_files/gtfs_flex/v2.0/success_1_all_attrs/: booking_rules_test_success_1.txt  locations_test_success_1.geojson
tests/test_files/gtfs_pathways/v1.0/fail_rules_1/: levels_v1_test_fail_rules_1.txt  pathways_v1_fail_rules_1.txt  stops_v1_fail_rules_1.txt
tests/test_files/gtfs_pathways/v1.0/fail_schema_1/: levels_v1_test_fail_schema_1.txt  pathways_v1_test_fail_schema_1.txt
tests/test_files/gtfs_pathways/v1.0/mbta_20220920_small/: stops_small.txt
tests/test_files/gtfs_pathways/v1.0/success_1_all_attrs/: pathways_v1_test_success_1.txt
tests/test_files/gtfs_pathways/v1.0/success_2_missing_attrs/: levels_v1_test_success_2.txt  pathways_v1_test_success_2.txt
