[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tdei_gtfs_csv_validator"
version = "0.0.20" # 20 fix for local tests and misc updates
authors = [
  { name="Kristin Ann", email="katuw@uw.edu" },
]
description = "Scripts to validate GTFS csv files. Focused on Flex and Pathways extensions" 
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/TaskarCenterAtUW/TDEI-gtfs-csv-validator"

# this stuff was causing the validator not to be able to be imported
# src/tdei_gtfs_csv_validator/*.py failed too...
# "tdei_gtfs_csv_validator/*.py" failed too
# *.py failed too, but I notice that rules, schemas and tests are getting included
#[tool.hatch.build]
#include = [
#  "/tdei_gtfs_csv_validator",
#  "/tests"
#]
