[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tdei_gtfs_csv_validator"
version = "0.0.25" # 25 added dependencies
authors = [
  { name="Kristin Ann", email="katuw@uw.edu" },
]
description = "Scripts to validate GTFS csv files. Focused on Flex and Pathways extensions" 
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "anyio==3.6.2",
  "attrs==22.2.0",
  "bleach==6.0.0",
  "build==0.10.0",
  "certifi==2022.12.7",
  "charset-normalizer==3.0.1",
  "click==8.1.3",
  "distlib==0.3.6",
  "docutils==0.19",
  "editables==0.3",
  "filelock==3.9.0",
  "h11==0.14.0",
  "hatchling==1.12.2",
  "httpcore==0.16.3",
  "httpx==0.23.3",
  "hyperlink==21.0.0",
  "idna==3.4",
  "importlib-metadata==6.0.0",
  "jaraco.classes==3.2.3",
  "jsonschema==4.17.3",
  "keyring==23.13.1",
  "markdown-it-py==2.1.0",
  "mdurl==0.1.2",
  "more-itertools==9.0.0",
  "numpy==1.24.0",
  "packaging==23.0",
  "pandas==1.5.2",
  "pathspec==0.11.0",
  "pexpect==4.8.0",
  "pkginfo==1.9.6",
  "platformdirs==2.6.2",
  "pluggy==1.0.0",
  "ptyprocess==0.7.0",
  "Pygments==2.14.0",
  "pyperclip==1.8.2",
  "pyproject_hooks==1.0.0",
  "pyrsistent==0.19.2",
  "python-dateutil==2.8.2",
  "pytz==2022.7",
  "readme-renderer==37.3",
  "requests==2.28.2",
  "requests-toolbelt==0.10.1",
  "rfc3986==1.5.0",
  "rich==13.3.1",
  "shellingham==1.5.0.post1",
  "six==1.16.0",
  "sniffio==1.3.0",
  "tomli==2.0.1",
  "tomli_w==1.0.0",
  "tomlkit==0.11.6",
  "twine==4.0.2",
  "urllib3==1.26.14",
  "userpath==1.8.0",
  "virtualenv==20.17.1",
  "webencodings==0.5.1",
  "zipp==3.12.0"
]

[project.urls]
"Homepage" = "https://github.com/TaskarCenterAtUW/TDEI-gtfs-csv-validator"

