[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tdei_gtfs_csv_validator"
version = "0.0.28" # 28 removed strict 
authors = [
  { name="Kristin Ann", email="katuw@uw.edu" },
]
description = "Scripts to validate GTFS csv files. Focused on Flex and Pathways extensions" 
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/TaskarCenterAtUW/TDEI-gtfs-csv-validator"

